GEO-SERVER/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      role: geo-server
  template:
    metadata:
      labels:
        role: geo-server
    spec:
      containers:
      - name: geo-server
        image: kartoza/geoserver
        ports:
          - name: geoserver
            containerPort: 8080
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
        volumeMounts: 
          - mountPath: /geo_server_data_dir
            name: mypvc
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: nfs-pv-claim-geoserver
