GEO-SERVER/Statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geo-server1
spec:
  replicas: 1
  selector:
    matchLabels:
      role: geo-server
  template:
    metadata:
      labels:
        role: geo-server
    spec:
      containers:
      - name: geo-server
        image: kartoza/geoserver
        ports:
          - name: geoserver
            containerPort: 8080
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
        volumeMounts: 
          - mountPath: /geo_server_data_dir
            name: mypvc
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: pv-claim-geoserver1
